--- a/views/layout/includes/header-admin.pug
+++ b/views/layout/includes/header-admin.pug
@@ -1,11 +1,12 @@
-header.bg-indigo-600.p-4 
+header.bg-babyblue.p-4 
     .container.mx-auto.flex.justify-between.items-center 
-        h1.text-2xl.text-white.font-extrabold.text-center Bienes 
-            span.font-normal Raíces
+        h1.text-2xl.text-white.font-foco.text-center Bienes 
+            span.font-rubi Raíces
 
         nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden") 
             a(href="/mis-propiedades") Mis propiedades 
             a(href="") Mi perfil
             form(action="/auth/cerrar-sesion" method="POST")  
                 input(type="hidden" name="_csrf" value= csrfToken)
-                input(type="submit" class="bg-indigo-800 py-2 px-10 rounded-lg" value="Cerrar Sesión")    
+                input(class="w-full transition ease-in-out delay-150 bg-darkblue hover:-translate-y-1 hover:scale-105 hover:bg-babyblue duration-300 text-white font-bold py-3 rounded-lg cursor-pointer transition duration-300" type="submit" value="Cerrar Sesión")    
+    
