--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -6,8 +6,14 @@ html(lang="es")
         meta(name="viewport", content="width=device=width, initial-scale=1.0")
         title Bienes Raíces | #{pagina}
         link(rel="stylesheet", href="/css/app.css")
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+NSW+Guides&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+NSW+Guides&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
         block styles
-    body.min-h-screen.bg-gray-50
+    body.min-h-screen.bg-babygray
        
         main(class="mx-auto container mt-10 px-2")
             block contenido
