--- a/views/auth/confirmar-cuenta.pug
+++ b/views/auth/confirmar-cuenta.pug
@@ -2,12 +2,12 @@ extends ../layout/index
 
 block contenido
     .py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Bienes 
+        h1.text-4xl.my-10.font-foco.text-center Bienes 
             span.font-normal Raíces  
-        h2.text-center.text-2xl.font-extrabold= pagina
+        h2.text-center.text-2xl.font-rubi= pagina
 
-    div(class="bg-white shadow py-8 px-4 rounded-lg max-w-md mx-auto") 
-        p(class= error ? 'bg-red-500' : 'bg-green-500').py-2.px-5.rounded-lg.w-full.font-bold.text-center.text-white.uppercase= mensaje
+    div(class="bg-babygray shadow py-8 px-4 rounded-lg max-w-md mx-auto") 
+        p(class= error ? 'bg-darkblue' : 'bg-babyblue').py-2.px-5.rounded-lg.w-full.font-foco.text-center.text-white.uppercase= mensaje
 
         if !error
-            a(href="/auth/login" class="text-center font-bold text-sm text-slate-600 uppercase mt-10 block") Ya puedes Iniciar Sesión
+            a(href="/auth/login" class="text-center font-rubi text-sm text-white uppercase mt-10 block") Ya puedes Iniciar Sesión
