--- a/views/layout/includes/header-app.pug
+++ b/views/layout/includes/header-app.pug
@@ -1,14 +1,14 @@
-header.bg-indigo-600.p-4 
+header.bg-babyblue.p-4 
     .container.mx-auto.flex.justify-between.items-center 
         a(href="/")
-            h1.text-2xl.text-white.font-extrabold.text-center Bienes 
-                span.font-normal Raíces
+            h1.text-2xl.text-white.font-foco.text-center Bienes 
+                span.font-rubi Raíces
 
         nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden") 
-            a(href="/auth/registro") Crear cuenta 
-            a(href="/auth/login") Iniciar Sesión
+            a(href="/auth/registro" class="font-foco") Crear cuenta 
+            a(href="/auth/login" class="font-foco") Iniciar Sesión
 
-div(class="bg-indigo-700 py-5 hidden lg:block")
+div(class="bg-darkblue py-5 hidden lg:block")
     div(class="container mx-auto flex justify-between")
         nav(class="flex gap-4 items-center") 
             a(href="/categorias/1" class="text-sm font-bold uppercase text-white") Casas
@@ -23,4 +23,4 @@ div(class="bg-indigo-700 py-5 hidden lg:block")
             
             input(type="text" id="termino" name="termino" placeholder="Buscar propiedades" class="p-2 rounded-lg shadow text-sm")
 
-            input(type="submit" class="bg-indigo-800 hover:bg-indigo-400 rounded-lg text-white uppercase font-bold p-2 cursor-pointer text-sm" value="Buscar" )
+            input(type="submit" class="bg-darkblue hover:bg-babyblue rounded-lg text-white uppercase font-rubi p-2 cursor-pointer text-sm" value="Buscar" )
