--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -3,24 +3,24 @@ block styles
     meta(name="csrf-token" content= csrfToken)
 block contenido
     div.py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Bienes 
+        h1.text-4xl.my-10.font-foco.text-center Bienes 
             span.font-normal Raíces  
-        h2.text-center.text-2xl.font-extrabold= pagina
+        h2.text-center.text-2xl.font-rubi= pagina
 
-        a(href="/propiedades/crear" class="rounded py-2 px-10 bg-indigo-600 hover-bg-indigo-700 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto") Publicar Propiedad
+        a(href="/propiedades/crear" class="rounded py-2 px-10 bg-darkblue hover-bg-indigo-700 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto") Publicar Propiedad
 
         if propiedades.length
             div(class="bg-white shadow rounded-lg")
-                div(class="divide-y divide-gray-200")
+                div(class="divide-y divide-babygray")
                     each propiedad in propiedades 
                         li 
                             div(class="p-6 w-full flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-8 md:space-y-0 gap-4")
                                 div(class="sm:w-1/4 md:w-1/6") 
                                     img(src=`uploads/${propiedad.imagen}`, alt=`Imagen propiedad ${propiedad.titulo}` class="w-full block")
                                 div(class="sm:w-2/4 md-w-3/6 lg:w-4/6 space-y-3")
-                                    a(class="block text-2xl font-extrabold text-indigo-600 truncate" href=`/propiedad/${propiedad.id}`)= propiedad.titulo
-                                    a(class="text-sm text-black font-bold")= propiedad.categoria.nombre
-                                    p(class="text-sm text-gray-500 font-bold flex items-center") 
+                                    a(class="block text-2xl font-foco text-darkblue truncate" href=`/propiedad/${propiedad.id}`)= propiedad.titulo
+                                    a(class="text-sm text-black font-rubi")= propiedad.categoria.nombre
+                                    p(class="text-sm text-darkgray font-rubi flex items-center") 
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                             <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                                         </svg>
